--- a/frontend/src/app/eloclient/calculator.component.html
+++ b/frontend/src/app/eloclient/calculator.component.html
@@ -3,11 +3,11 @@
   <h4>{{title}}</h4>
   <div>
         <label>First Player: </label>
-        <input [(ngModel)]="player1eloNumber" placeholder="1000"/>
+        <input [(ngModel)]="result.eloPlayerOne" placeholder="1000"/>
   </div>
   <div>
         <label>Second Player: </label>
-        <input [(ngModel)]="player2eloNumber" placeholder="1000"/>
+        <input [(ngModel)]="result.eloPlayerTwo" placeholder="1000"/>
   </div>
   <div>
         <label>Result: </label>
